syntax = "proto3";
package data;
option go_package = "github.com/braginantonev/mhserver/proto/data";

import "google/protobuf/empty.proto";

enum DataType {
    File = 0;
    Image = 1;
    Music = 2;
    //Todo
}

enum Action {
    Create = 0;
    Patch = 1;
    Finish = 2;
    Delete = 3;
    Get = 4;
}

message FilePart {
    bytes body = 1;
    int64 offset = 2;
    bool isLast = 3;
}

message FileSize {
    uint64 size = 1;
    uint64 chunk = 2;
}

message DataInfo {
    DataType type = 1;
    string user = 2;
    string file = 3;
    FileSize size = 4;
}

message Data {
    DataInfo info = 1;
    Action action = 2;
    FilePart part = 3;
}

message SHASum {
    bytes sum = 1;
}

service DataService {
    rpc SaveData (Data) returns (google.protobuf.Empty);
    rpc GetData (Data) returns (FilePart);
    rpc GetSum (DataInfo) returns (SHASum);
    rpc GetChunkSize (DataInfo) returns (FileSize);
}